--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 MONGO_URI = mongodb+srv://jrnn21:277755@cluster0.qsbql.gcp.mongodb.net/langdyDB?retryWrites=true&w=majority
-NODE_ENV = development
-PORT = 5000
+NODE_ENV = production
+PORT = 22
 JWT_SECRET = 'abc123'
