--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-async-handler": "^1.1.4",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.12.10",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
