--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 MONGO_URI = mongodb+srv://jrnn21:277755@cluster0.qsbql.gcp.mongodb.net/langdyDB?retryWrites=true&w=majority
-NODE_ENV = production
+NODE_ENV = development
 PORT = 3200
 JWT_SECRET = 'abc123'
+NO = production
+N = development
