--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   "jquery": "^3.6.0",
   "query-string": "^7.0.0",
   "react": "^17.0.2",
+  "react-adsense": "^0.1.0",
   "react-bootstrap": "^1.6.0",
   "react-dom": "^17.0.2",
   "react-helmet": "^6.1.0",
